<resources>
    <string name="app_name">NotYet</string>
    <string name="action_create_new_activity_label">New Activity</string>
    <string name="action_visibility_on_label">Show All Activities</string>
    <string name="action_visibility_off_label">Hide Completed Activities</string>
    <string name="action_change_sort">Change Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">@string/help_activity_title</string>
    <string name="action_about">@string/about_activity_title</string>
    <string name="done_label">Done</string>
    <string name="cancel_label">Cancel</string>
    <string name="done_button_content_description">Checkmark for done</string>
    <string name="cancel_button_content_description">X for cancel</string>
    <string name="activity_title_label">Title</string>
    <string name="historical_label">Historical</string>
    <string name="forecast_label">Forecast/Goal</string>
    <string name="one_swipe_label">Swipe Left Value</string>
    <string name="higher_is_better_label">Higher is better?</string>
    <string name="higher_is_better_button_on_text">Higher Is Better</string>
    <string name="higher_is_better_button_off_text">Lower Is Better</string>
    <string name="days_to_show_label">Days to show</string>
    <string name="help_historical_image_description">Help button for Historical field</string>
    <string name="help_forecast_image_description">Help button for Forecast/Goal field</string>
    <string name="help_swipe_image_description">Help button for Swipe Left Value field</string>
    <string name="help_higher_image_description">Help button for higher is better button</string>
    <string name="help_days_image_description">Help button for days of the week buttons</string>
    <string name="help_activity_title">Help/How To</string>
    <string name="help_title">Help:</string>
    <string name="help_historical">What do you think your daily average was in the past (before starting to use the app)?\n\nGuess low and you can make easy progress.</string>
    <string name="help_forecast">What is your daily goal?\n\nThis will be used to project in the future what your averages will look like if you keep it up.</string>
    <string name="help_swipe">From the main screen, you can swipe to the left. If you do, it will use this value for today and hide the activity for the rest of the day.</string>
    <string name="help_higher">Is higher better?\n\nEx. Pushups, you want to do more per day. Ex. Soda, you want to do fewer per day.</string>
    <string name="help_days">Which days of the week should this activity be shown?\n\nEx. If you only want to lift on Mon, Wed, Fri, then just leave those selected and the main page won\'t show Lifting on the other days.</string>
    <string name="hide_until_tomorrow">Hide this activity until tomorrow</string>
    <string name="set_value_and_hide_until_tomorrow">Set value and hide until tomorrow</string>
    <string name="list_item_activity_header_hide">Hide this header permanently</string>
    <string name="list_item_activity_title">Activity Title</string>
    <string name="list_item_activity_today">Today\'s Value</string>
    <string name="list_item_activity_current_A7">A7</string>
    <string name="list_item_activity_current_A30">A30</string>
    <string name="list_item_activity_current_A90">A90</string>
    <string name="list_item_activity_best_A7">B7</string>
    <string name="list_item_activity_best_A30">B30</string>
    <string name="list_item_activity_best_A90">B90</string>
    <string name="main_header_help_current">A7 is the average of the last 7 days including today.\nA30 is the average of the last 30 days including today.\nA90 is the average of the last 90 days including today.</string>
    <string name="main_header_help_best">B7 is the best A7 you have ever gotten.\nB30 is the best A30 you have ever gotten.\nB90 is the best A90 you have ever gotten.</string>
    <string name="no_activities_new_user_hero">Click here to start forming a new habit.</string>
    <string name="main_header_help_content_description">help button</string>
    <string name="habit_settings_submenu_title">Activity</string>
    <string name="action_habit_settings">Settings</string>
    <string name="action_habit_delete">Delete&#8230;</string>
    <string name="action_habit_reset">Reset&#8230;</string>
    <string name="add_more_history">Tap to add more history.</string>
    <string name="add_more_history_dialog_question">How many days to add?</string>
    <string name="habit_data_update_title">Updating&#8230;</string>
    <string name="best_label">Best</string>
    <string name="date_label">Date</string>
    <string name="val_column_label">Val</string>
    <string name="a7_column_label">A7</string>
    <string name="a30_column_label">A30</string>
    <string name="a90_column_label">A90</string>
    <string name="today_label">Today</string>
    <string name="new_value_label">New value:</string>
    <string name="delete_habit_dialog_title">Delete Activity?</string>
    <string name="delete_habit_dialog_message">Do you really want to delete this activity and all associated data?</string>
    <string name="delete_habit_completed_toast">Activity deleted</string>
    <string name="reset_habit_dialog_title">Reset Activity?</string>
    <string name="reset_habit_dialog_message">Do you really want to reset this activity and delete all associated data?</string>
    <string name="reset_habit_completed_toast">Activity reset</string>
    <string name="habit_list_item_checkmark_content_description">Checkmark to indicated the day is selected for multiple editing.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_day_change_set">Set</string>
    <string name="pref_day_change_cancel">Cancel</string>
    <string name="pref_day_change_label">Time to start a new day</string>
    <string name="pref_day_change_key">day_change</string>
    <string name="pref_day_change_default">0</string>
    <string name="list_item_drag_handle_content_description">Handle to drag for reordering activities.</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="must_be_a_number">Must be a number</string>
    <string name="error_creating_activity_title">Error Creating Activity</string>
    <string name="error_creating_activity_message">Make sure you have a unique title for your activity and all fields are completed.</string>
    <string name="about_activity_title">About</string>
    <string name="about_about_header">@string/about_activity_title</string>
    <string name="about_text">This application was made mostly for myself to improve my habits based on a strategy that I think works best.
        Failing once does not send you back to the beginning&#8230; you must get back up and continue to strive to improve. I hope it is useful for you too.</string>
    <string name="about_email"> - <a href="mailto:NotYetApp@outlook.com">NotYetApp@outlook.com</a></string>
    <string name="about_attribution_header">Attributions</string>
    <string name="about_attributions">This application uses:\n
        &#8226;<a href="http://www.android-graphview.org/">http://www.android-graphview.org/</a>. Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a>.\n
        &#8226;<a href="https://github.com/daimajia/AndroidSwipeLayout">https://github.com/daimajia/AndroidSwipeLayout</a>. Licensed under <a href="https://github.com/daimajia/AndroidSwipeLayout/blob/master/LICENSE">MIT License</a>.\n
        &#8226;<a href="https://github.com/bauerca/drag-sort-listview">https://github.com/bauerca/drag-sort-listview</a>. Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a>.\n
        &#8226;<a href="https://github.com/douglasjunior/android-simple-tooltip">https://github.com/douglasjunior/android-simple-tooltip</a>. Licensed under <a href="https://github.com/douglasjunior/android-simple-tooltip/blob/master/LICENSE">MIT License</a>.\n
        &#8226;<a href="https://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">Android Asset Studio</a> was used to generate the icon. Licensed under the <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.\n
        &#8226;EULA based on a template provided by <a href="https://media.termsfeed.com/pdf/eula-template.pdf">termsfeed.com</a>.\n
    </string>
</resources>