<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    app:drag_edge="right|left"
    app:show_mode="pull_out"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/bad_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:show_mode="lay_down"
        android:orientation="vertical">
        <TextView
            android:id="@+id/bad_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hide_until_tomorrow"
            style="@style/ListItemStats"
            android:gravity="center_vertical|end"
            android:background="@color/colorBad" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/good_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/good_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/set_value_and_hide_until_tomorrow"
            android:gravity="center_vertical"
            style="@style/ListItemStats"
            android:background="@color/colorGood" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/surface_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/black" />
            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/touch_selector"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/list_item_title"
                    android:ellipsize="middle"
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_title"/>
                <TextView
                    android:id="@+id/list_item_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_today"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_7"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/list_item_7_avg"
                    android:scrollHorizontally="true"
                    android:ellipsize="middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_current_A7"/>
                <TextView
                    android:id="@+id/list_item_7_best"
                    android:scrollHorizontally="true"
                    android:ellipsize="middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_best_A7"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_30"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/list_item_30_avg"
                    android:scrollHorizontally="true"
                    android:ellipsize="middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_current_A30"/>
                <TextView
                    android:id="@+id/list_item_30_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_best_A30"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/section_90"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/list_item_90_avg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_current_A90"/>
                <TextView
                    android:id="@+id/list_item_90_best"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ListItemStats"
                    android:text="@string/list_item_activity_best_A90"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/black" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />
    </LinearLayout>
</com.daimajia.swipe.SwipeLayout>
