<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habit_listview_and_best_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/habit_data_header_layout"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDate"
            android:text="@string/date_label"
            />
        <TextView
            android:id="@+id/habit_list_item_value"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorValues"
            style="@style/ListItemStats"
            android:text="@string/val_column_label"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAvg7"
            style="@style/ListItemStats"
            android:text="@string/a7_column_label"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAvg30"
            style="@style/ListItemStats"
            android:text="@string/a30_column_label"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAvg90"
            style="@style/ListItemStats"
            android:text="@string/a90_column_label"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/habit_data_footer_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemDate"
            android:text="@string/best_label" />
        <android.support.v4.widget.Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/footer_best_7"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemStats"
            tools:text="35.5"/>
        <TextView
            android:id="@+id/footer_best_30"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemStats"
            tools:text="40"/>
        <TextView
            android:id="@+id/footer_best_90"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ListItemStats"
            tools:text="45"/>
    </LinearLayout>
    <View
        android:id="@+id/separator_line_above_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_thickness"
        android:layout_above="@id/habit_data_footer_layout"
        style="@style/SeparatorStyle" />
    <View
        android:id="@+id/separator_line_below_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_thickness"
        android:layout_below="@id/habit_data_header_layout"
        style="@style/SeparatorStyle" />

    <ListView
        android:id="@+id/habit_listview"
        android:layout_above="@id/separator_line_above_footer"
        android:layout_below="@id/separator_line_below_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</RelativeLayout>